--- a/short_circuiting.ipynb
+++ b/short_circuiting.ipynb
@@ -2,37 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "None\n"
+     ]
     }
    ],
    "source": [
-    "x, y, z = 1, 2, 3\n",
-    "def switch(x):\n",
-    "\tz = 4\n",
-    "if x == y:\n",
-    "\tdef which(one):\n",
-    "\t\treturn x + one\n",
-    "else:\n",
-    "\tdef which(one):\n",
-    "\t\treturn x - one\n",
-    "\tx = which(x)\n",
-    "\twhich(x)\n",
-    "def which(one):\n",
-    "\treturn x * one\n",
-    "switch(x + 1)\n",
-    "x = 5\n",
-    "which(z)\n"
+    "cat = 3\n",
+    "def dog():\n",
+    " \treturn cat\n",
+    "def hog():\n",
+    "\tcat = 4\n",
+    "\tprint(cat, dog())\n",
+    "cat = 5\n",
+    "\n",
+    "print((lambda dog: print(dog()))(lambda: 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(print(6))"
    ]
   }
  ],
