add new test function

--- a/short_circuiting.ipynb
+++ b/short_circuiting.ipynb
@@ -43,6 +43,79 @@
    "source": [
     "print(print(6))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mid(nights):\n",
+    "\tdays = 7\n",
+    "\tif days or nights:\n",
+    "\t\tdays, nights = (days and days + 1), (nights or days)\n",
+    "\tprint(days)\n",
+    "\treturn nights\n",
+    "\n",
+    "mid(not 'swift')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not 'swift'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square(pow):\n",
+    "    y = 2\n",
+    "    def\t square(x):\n",
+    "        pow(x, y)\n",
+    "    return square\n",
+    "\n",
+    "def is_it(square):\n",
+    "    y = 0\n",
+    "    square(2)\n",
+    "\n",
+    "is_it(square(lambda x, y: pow(x, y+1)))"
+   ]
   }
  ],
  "metadata": {
