--- a/short_circuiting.ipynb
+++ b/short_circuiting.ipynb
@@ -256,6 +256,53 @@
     "def special(f, x):\n",
     "\treturn f(x) + f(x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def square(x):\n",
+    "    return x * x\n",
+    "\n",
+    "def make_adder(n):\n",
+    "    def adder(k):\n",
+    "        return k+n\n",
+    "    return adder\n",
+    "\n",
+    "def compose1(f, g):\n",
+    "    def h(x):\n",
+    "        return f(g(x))\n",
+    "    return h\n",
+    "\n",
+    "compose1(square, make_adder(2))(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "def f(g):\n",
+    "    a = 2\n",
+    "    return lambda y: a * g(y)\n",
+    "\n",
+    "f(lambda y: a + y)(a)"
+   ]
   }
  ],
  "metadata": {
