--- a/short_circuiting.ipynb
+++ b/short_circuiting.ipynb
@@ -353,6 +353,69 @@
    "source": [
     "range(4)[-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "32\n",
+      "321\n",
+      "32\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def inverse_cascade(n):\n",
+    "    grow(n)\n",
+    "    print(n)\n",
+    "    shrink(n)\n",
+    "\n",
+    "def f_then_g(f, g, n):\n",
+    "    if n:\n",
+    "        f(n)\n",
+    "        g(n)\n",
+    "\n",
+    "grow = lambda n: f_then_g(grow, print, n // 10)\n",
+    "shrink = lambda n: f_then_g(print, shrink, n // 10)\n",
+    "\n",
+    "inverse_cascade(321)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1134903170"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def fib(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fib(n-2) + fib(n-1)\n",
+    "    \n",
+    "fib(45)"
+   ]
   }
  ],
  "metadata": {
