--- a/short_circuiting.ipynb
+++ b/short_circuiting.ipynb
@@ -81,6 +81,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5, 9, 10, None, None]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = [9, 7, 8]\n",
+    "a, b = s, s[:]\n",
+    "a.pop()\n",
+    "s = [3]\n",
+    "s.extend([4, 5])\n",
+    "a\n",
+    "s.extend([s.append(9), s.append(10)])\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = [6, 7, 8]\n",
+    "print(s.append(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
