--- a/short_circuiting.ipynb
+++ b/short_circuiting.ipynb
@@ -108,6 +108,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 要求：给定硬币面值列表 coins (已排序)，生成所有用这些硬币凑出金额 amount 的组合，\n",
+    "# 且组合内硬币按非降序排列（避免重复，如 [1,2] 和 [2,1] 视为同一种组合，只生成其中一个）。\n",
+    "''' >>> list(coin_combinations(3, [1, 2]))\n",
+    "[[1, 1, 1], [1, 2]]  # 不允许 [2, 1]\n",
+    ">>> list(coin_combinations(4, [1, 2, 3]))\n",
+    "[[1,1,1,1], [1,1,2], [1,3], [2,2]]\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coin_combinations(amount, coins, current_combination=None, start=0):\n",
+    "    if current_combination is None:\n",
+    "        current_combination = []\n",
+    "    if amount == 0:\n",
+    "        yield current_combination.copy()\n",
+    "        return\n",
+    "    for i in range(start, len(coins)):\n",
+    "        coin = coins[i]\n",
+    "        if coin > amount:\n",
+    "            continue\n",
+    "        current_combination.append(coin)\n",
+    "        yield from coin_combinations(amount - coin, coins, current_combination, i)\n",
+    "        current_combination.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partitions(n, m):\n",
+    "\tif n > 0 and m > 0:\n",
+    "\t\tif n == m:\n",
+    "\t\t\tyield str(m)\n",
+    "\t\tfor p in partitions(n-m, m):\n",
+    "\t\t\tyield p + ' + ' + str(m)\n",
+    "\t\tyield from partitions(n, m-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
