--- a/short_circuiting.ipynb
+++ b/short_circuiting.ipynb
@@ -28,6 +28,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Link(5, Link(6, Link(7)))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Link:\n",
+    "    \"\"\"A linked list.\n",
+    "\n",
+    "    >>> s = Link(1)\n",
+    "    >>> s.first\n",
+    "    1\n",
+    "    >>> s.rest is Link.empty\n",
+    "    True\n",
+    "    >>> s = Link(2, Link(3, Link(4)))\n",
+    "    >>> s.first = 5\n",
+    "    >>> s.rest.first = 6\n",
+    "    >>> s.rest.rest = Link.empty\n",
+    "    >>> s                                    # Displays the contents of repr(s)\n",
+    "    Link(5, Link(6))\n",
+    "    >>> s.rest = Link(7, Link(Link(8, Link(9))))\n",
+    "    >>> s\n",
+    "    Link(5, Link(7, Link(Link(8, Link(9)))))\n",
+    "    >>> print(s)                             # Prints str(s)\n",
+    "    <5 7 <8 9>>\n",
+    "    \"\"\"\n",
+    "    empty = ()\n",
+    "\n",
+    "    def __init__(self, first, rest=empty):\n",
+    "        assert rest is Link.empty or isinstance(rest, Link)\n",
+    "        self.first = first\n",
+    "        self.rest = rest\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        if self.rest is not Link.empty:\n",
+    "            rest_repr = ', ' + repr(self.rest)\n",
+    "        else:\n",
+    "            rest_repr = ''\n",
+    "        return 'Link(' + repr(self.first) + rest_repr + ')'\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        string = '<'\n",
+    "        while self.rest is not Link.empty:\n",
+    "            string += str(self.first) + ' '\n",
+    "            self = self.rest\n",
+    "        return string + str(self.first) + '>'\n",
+    "\n",
+    "link = Link(5, Link(6, Link(7)))\n",
+    "link      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "\tx, y = 0, 0\n",
+    "\tdef __init__(self):\n",
+    "\t\treturn\n",
+    "class B(A):\n",
+    "\tdef __init__(self):\n",
+    "\t\treturn\n",
+    "class C(A):\n",
+    "\tdef __init__(self):\n",
+    "\t\treturn\n",
+    "print(A.x, B.x, C.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -842,7 +931,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -856,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
