--- a/short_circuiting.ipynb
+++ b/short_circuiting.ipynb
@@ -28,6 +28,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, [3, [4, 5]]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def chain(s):\n",
+    "    return [s[0], s[1:]]\n",
+    "silver = [2, chain([3, 4, 5])]\n",
+    "silver"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -87,6 +110,74 @@
     "link = Link(5, Link(6, Link(7)))\n",
     "link      "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None]\n",
+      "[4, [2, 3], 5]\n",
+      "[2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cycle(a):\n",
+    "    def f(rest):\n",
+    "        rest.append(a.pop())\n",
+    "        return [rest.append(a)]\n",
+    "    b = []\n",
+    "    a = f(b)\n",
+    "    b = b + [5]\n",
+    "    print(a)\n",
+    "    print(b)\n",
+    "\n",
+    "c = [2, 3, 4]\n",
+    "cycle(c)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, [7, [8, 9, 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def push(t, x):\n",
+    "    s = list(t)\n",
+    "    s[1].append(x)\n",
+    "    \n",
+    "def pull():\n",
+    "    s = list(t)\n",
+    "    u = s.pop()\n",
+    "    return u[1][0]\n",
+    "\n",
+    "s = [7, [8, 9]]\n",
+    "t = [6, s]\n",
+    "\n",
+    "push(s, pull())\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
